set_cmake_folder_context(TARGET_FOLDER_NAME)

add_subdirectory(core_types)
add_subdirectory(core_objects)
add_subdirectory(opendaq)

add_subdirectory(py_opendaq_daq)

option(OPENDAQ_ENABLE_PYTHON_BINDINGS_TESTS_ONLY "Enable only the python bindings tests" OFF)

# Validate modules required for python bindings tests
if ((OPENDAQ_ENABLE_PYTHON_BINDINGS_TESTS OR OPENDAQ_ENABLE_PYTHON_BINDINGS_TESTS_ONLY) AND
    NOT (DAQMODULES_OPENDAQ_CLIENT_MODULE AND
        DAQMODULES_OPENDAQ_SERVER_MODULE AND
        OPENDAQ_ENABLE_WEBSOCKET_STREAMING AND
        OPENDAQ_ENABLE_NATIVE_STREAMING AND
        OPENDAQ_ENABLE_OPCUA AND
        DAQMODULES_REF_FB_MODULE AND
        DAQMODULES_REF_DEVICE_MODULE))
    message(WARNING "DAQMODULES_OPENDAQ_CLIENT_MODULE, DAQMODULES_OPENDAQ_SERVER_MODULE, OPENDAQ_ENABLE_OPCUA, OPENDAQ_ENABLE_NATIVE_STREAMING, OPENDAQ_ENABLE_WEBSOCKET_STREAMING, DAQMODULES_REF_DEVICE_MODULE and DAQMODULES_REF_FB_MODULE must be ON to enable python bindings tests")
endif()

if ((OPENDAQ_ENABLE_PYTHON_BINDINGS_TESTS OR OPENDAQ_ENABLE_PYTHON_BINDINGS_TESTS_ONLY) AND
        DAQMODULES_OPENDAQ_CLIENT_MODULE AND
        DAQMODULES_OPENDAQ_SERVER_MODULE AND
        OPENDAQ_ENABLE_WEBSOCKET_STREAMING AND
        OPENDAQ_ENABLE_NATIVE_STREAMING AND
        OPENDAQ_ENABLE_OPCUA AND
        DAQMODULES_REF_FB_MODULE AND
        DAQMODULES_REF_DEVICE_MODULE)
    add_subdirectory(tests)
endif()
